[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-hba1c-diabetes"
version = "1.0.0"
description = "Causal inference analysis of HbA1c testing impact on hospital readmissions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Data Science Research"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "xgboost>=1.4.0",
    "doubleml>=0.5.0",
    "networkx>=2.6.0",
    "pgmpy>=0.1.19",
    "ucimlrepo>=0.0.3",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "isort>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/username/causal-hba1c-diabetes"
Repository = "https://github.com/username/causal-hba1c-diabetes"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88